# cradio

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  environ.bzl  requirements.in  requirements.txt  sandbox_notebook.ipynb
localization/: BUILD.bazel  enable_bias.sh  main.py
tools/: BUILD.bazel  install_prereqs.sh
tools/scripts/: run_notebook.sh
