###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "cradio", version = "0.1")

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "spdlog", version = "1.15.0.bcr.2")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

## Set up bazel managed python env
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "cradio_python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",  # or requirements.txt
)
use_repo(pip, "cradio_python_deps")
